src/objects/Sub_ToDo__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToDo__c</fullName>
        <label>ToDo</label>
        <referenceTo>ToDo__c</referenceTo>
        <relationshipLabel>Sub-ToDos</relationshipLabel>
        <relationshipName>Sub_ToDos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sub-ToDo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sub-ToDo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-ToDos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>